--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "13.2.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-textarea-autosize": "^8.4.0",
+    "react-use-websocket": "^4.3.1",
+    "styled-components": "^5.3.8"
   },
   "devDependencies": {
+    "@babel/plugin-syntax-typescript": "^7.20.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/styled-components": "^5.1.26",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "tailwindcss": "^3.2.7",
+    "twin.macro": "^3.1.0",
     "typescript": "4.9.5"
   }
 }
