--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-twemoji": "^0.4.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-textarea-autosize": "^8.4.0",
+    "react-twemoji": "^0.5.0",
     "react-use-websocket": "^4.3.1",
     "styled-components": "^5.3.8"
   },
